fixed footer covering content

--- a/main.css
+++ b/main.css
@@ -9,9 +9,10 @@
     color: #3e3e3e;
     text-align: center;
     line-height: 1.5;
+    min-height: 400px;
+    margin-bottom: 75px;
+    clear: both;
   }
-
-
 
   h2 {
     text-decoration: underline;
